--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "ah07.xyz",
   "version": "1.0.0",
   "description": "My personal website! It's a personal website.",
-  "main": "three.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "three": "^0.165.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
